# INE5410

./: CMakeLists.txt  PerformanceFormulasHelper.java  README.md
AF1-1/: Main.java
af1-helper/: PerformanceFormulasHelper.java
alocacao-de-memoria/exercicios-1/: CMakeLists.txt  Main.c  MinMax.c  MinMax.h  SortVector.c  SortVector.h  main.c
exercicios-de-aula/04-03/: MinMax.c
exercicios-de-aula/AF-deadlock/exercicio_1/: Makefile
exercicios-de-aula/AF-deadlock/exercicio_2/: main.c
exercicios-de-aula/AF-mutex/exercicio_1/: main.c
exercicios-de-aula/AF-mutex/exercicio_2/: thread.c
exercicios-de-aula/AF-openmp/exercicio_2/: main.c
exercicios-de-aula/AF-openmp/exercicio_3/: main.c
exercicios-de-aula/AF-semaforo/: result.txt
exercicios-de-aula/AF-semaforo/exercicio_1/: main.c  program  result.txt  testes.py
exercicios-de-aula/AF-semaforo/exercicio_2/: main.c
exercicios-de-aula/AF-threads/exercicio_2/: main.c
exercicios-de-aula/AF-threads/exercicio_3/: main.c
tarefas/AF-3.4/AF-3.4/: ex-1.py  ex-2.py  ex-3.py
tarefas/AF-deadlock/exercicio_1/: main.c
tarefas/AF-deadlock/exercicio_2/: Makefile
tarefas/AF-openmp/exercicio_1/: main.c
tarefas/AF-openmp/exercicio_2/: Makefile
tarefas/AF-processos/AF-processos/exercicio_1/: main.c
tarefas/AF-processos/AF-processos/exercicio_2/: main.c
tarefas/AF-semaforo/exercicio_1/: Makefile
tarefas/AF-semaforo/exercicio_2/: program
tarefas/AF-threads/exercicio_1/: main.c
